--- a/KERNEL_EXAMPLE.ipynb
+++ b/KERNEL_EXAMPLE.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,18 +53,76 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[255. 255. 255.]\n",
+      "   [255. 255. 255.]\n",
+      "   [255. 255. 255.]\n",
+      "   ...\n",
+      "   [255. 255. 255.]\n",
+      "   [255. 255. 243.]\n",
+      "   [255. 255. 255.]]\n",
+      "\n",
+      "  [[255. 255. 255.]\n",
+      "   [  0.   0.   0.]\n",
+      "   [  0.   0.   0.]\n",
+      "   ...\n",
+      "   [ 60.  51.  54.]\n",
+      "   [ 67.  58.  61.]\n",
+      "   [255. 255. 255.]]\n",
+      "\n",
+      "  [[255. 255. 255.]\n",
+      "   [  4.   4.   4.]\n",
+      "   [  0.   0.   0.]\n",
+      "   ...\n",
+      "   [ 26.  29.  19.]\n",
+      "   [ 21.  27.  16.]\n",
+      "   [255. 255. 255.]]\n",
+      "\n",
+      "  ...\n",
+      "\n",
+      "  [[255. 255. 255.]\n",
+      "   [  0.   0.   0.]\n",
+      "   [  0.   0.   0.]\n",
+      "   ...\n",
+      "   [  2.   5.   0.]\n",
+      "   [  4.   7.   0.]\n",
+      "   [255. 255. 103.]]\n",
+      "\n",
+      "  [[255. 255. 255.]\n",
+      "   [  0.   0.   0.]\n",
+      "   [  0.   0.   0.]\n",
+      "   ...\n",
+      "   [  0.   0.   0.]\n",
+      "   [  0.   0.   0.]\n",
+      "   [251. 255.  83.]]\n",
+      "\n",
+      "  [[255. 255. 255.]\n",
+      "   [255. 255. 255.]\n",
+      "   [255. 255. 255.]\n",
+      "   ...\n",
+      "   [208. 255.  44.]\n",
+      "   [194. 248.  26.]\n",
+      "   [255. 255.  92.]]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "sess = tf.Session()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conv2d = tf.nn.conv2d([image],kernel,strides=[1,1,1,1],padding=\"SAME\")"
+    "with tf.Session() as sess:\n",
+    "    tf.global_variables_initializer().run()\n",
+    "    coord = tf.train.Coordinator()\n",
+    "    threads = tf.train.start_queue_runners(sess=sess,coord=coord)\n",
+    "    \n",
+    "    conv2d = tf.nn.conv2d([image],kernel,strides=[1,1,1,1],padding=\"SAME\")\n",
+    "    activation_map = sess.run(tf.minimum(tf.nn.relu(conv2d),255))\n",
+    "    \n",
+    "    print(activation_map)\n",
+    "    coord.request_stop()\n",
+    "    coord.join(threads)\n",
+    "    sess.close()"
    ]
   },
   {
@@ -72,9 +130,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "activation_map = sess.run(tf.minimum(tf.nn.relu(conv2d),255))"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
