image writer to TFRecord

--- a/glob.ipynb
+++ b/glob.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,11 +89,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def write_records_file(dataset,record_location)"
+    "sess = tf.Session()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_records_file(dataset,record_location):\n",
+    "    writer = None\n",
+    "    \n",
+    "    current_index = 0\n",
+    "    for breed, images_filenames in dataset.items():\n",
+    "        for image_filename in images_filenames:\n",
+    "            if current_index % 100 == 0:\n",
+    "                if writer:\n",
+    "                    writer.close()\n",
+    "                record_filename = \"{record_location}-{current_index}.tfrecords\".format(record_location=record_location,current_index=current_index)\n",
+    "                writer = tf.python_io.TFRecordWriter(record_filename)\n",
+    "                current_index += 1\n",
+    "                image_file = tf.read_file(image_filename)\n",
+    "                try:\n",
+    "                    image=tf.image.decode_jpeg(image_file)\n",
+    "                except:\n",
+    "                    print(image_filename)\n",
+    "                    continue\n",
+    "                grayscale_image = tf.image.rgb_to_grayscale(image)\n",
+    "                resized_image = tf.image.resize_images(grayscale_image,250,151)\n",
+    "                image_bytes = sess.run(tf.cast(resized_image,tf.uint8)).tobytes()\n",
+    "                image_label = breed.encode(\"utf-8\")\n",
+    "                example = tf.train.Example(features=tf.train.Features(feature={'label':tf.train.Feature(bytes_list=tf.train.BytesList(value=[image_label])),'image':tf.train.Feature(bytes_list=tf.train.BytesList(value=[image_bytes]))}))\n",
+    "                writer.write(example.SerializeToString())\n",
+    "    writer.close()"
    ]
   },
   {
@@ -101,7 +134,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "write_records_file(testing_dataset,\"./output\")"
+   ]
   }
  ],
  "metadata": {
